Fixed sidebar headline top padding on mobile devices.

--- a/meta/vufind/themes/meta-bootstrap3/css/metastyles.css
+++ b/meta/vufind/themes/meta-bootstrap3/css/metastyles.css
@@ -158,7 +158,7 @@ select.form-control {
 
 .sidebar h4 {
   margin-top: 0; }
-  @media (max-width: 768px) {
+  @media (max-width: 992px) {
     .sidebar h4 {
       margin-top: 30px; } }
 
